--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <module>Amazon</module>
         <module>Facebook</module>
         <module>HuffingtonPost</module>
-        <module>CNN</module>
         <module>Tesla</module>
         <module>HealthFirst</module>
         <module>SallieMae</module>
@@ -72,6 +71,16 @@
                 <groupId>com.google.api-client</groupId>
                 <artifactId>google-api-client</artifactId>
                 <version>1.22.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.oauth-client</groupId>
+                <artifactId>google-oauth-client-jetty</artifactId>
+                <version>1.23.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.apis</groupId>
+                <artifactId>google-api-services-sheets</artifactId>
+                <version>v4-rev498-1.23.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
