--- a/Generic/pom.xml
+++ b/Generic/pom.xml
@@ -56,6 +56,10 @@
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-sheets</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
