--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
                 <artifactId>google-api-services-sheets</artifactId>
                 <version>v4-rev498-1.23.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
