--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
 # Created by .ignore support plugin (hsz.mobi)
+
+### Eclipse
+.classpath
+.project
+.settings/
+
+### Intellij
+.idea/
+*.iml
+*.iws
+
+### Google Sheets API
+*.credentials/
+
+### Mac
+.DS_Store
+
+### Maven template
+log/
+target/
+test-output/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
