--- a/RestApi/pom.xml
+++ b/RestApi/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>HealthFirst</artifactId>
+    <artifactId>RestApi</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,6 +18,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -28,17 +29,18 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <!--this is to run our testcases by maven-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.19.1</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>target/test-classes/YoutubeTestRunner.xml</suiteXmlFile>
+                        <suiteXmlFile>target/test-classes/RestApiTestRunner.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+
 </project>
