--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,12 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Generic</module>
-        <module>Amazon</module>
-        <module>Facebook</module>
         <module>HuffingtonPost</module>
-        <module>Tesla</module>
-        <module>HealthFirst</module>
-        <module>SallieMae</module>
         <module>CitiBank</module>
-        <module>W3schools</module>
         <module>Youtube</module>
         <module>BestBuy</module>
+        <module>RestApi</module>
+
     </modules>
 
     <dependencyManagement>
@@ -83,6 +79,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
+            </dependency>
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>3.0.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
