--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>W3schools</module>
         <module>Youtube</module>
         <module>RestAPI</module>
+        <module>Rakuten</module>
     </modules>
 
     <dependencyManagement>
@@ -95,6 +96,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
