--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>Youtube</module>
         <module>RestAPI</module>
         <module>Rakuten</module>
+        <module>Bestbuy</module>
     </modules>
 
     <dependencyManagement>
