--- a/BestBuy/pom.xml
+++ b/BestBuy/pom.xml
@@ -18,5 +18,21 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!--this is to run our testpageobject by maven-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>target/test-classes/BestBuyTestRunner.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
